--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "globals": "^15.13.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5",
     "typescript-eslint": "^8.18.0"
   }
